new functionality: forecasting weather in next 24h

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -9,3 +9,12 @@
 .ui.home-city-button.button {
   margin-left: 12px;
 }
+
+.home-button-container-hours-forecast {
+  max-width: 50vh;
+  margin-top: 2vh;
+}
+
+.home-button-hours-forecast {
+  width: 100%;
+}
