--- a/src/components/CurrentWeather/CurrentWeather.css
+++ b/src/components/CurrentWeather/CurrentWeather.css
@@ -1,21 +1,21 @@
-.current-temperature-container {
-  margin-top: 4vh;
+.current-weather-container {
+  margin-top: 2vh;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   max-width: 50vh;
   border-radius: 7px;
 }
 
-.current-temperature-icon {
+.current-weather-icon {
   width: 20vh;
   height: 20vh;
 }
 
-.current-temperature-city-name {
+.current-weather-city-name {
   margin-top: 10px;
   margin-bottom: 20px;
 }
 
-.current-temeperature-values {
+.current-weather-values {
   margin-top: 10px;
   margin-bottom: 10px;
 }
