--- a/src/components/CurrentWeather/CurrentWeather.css
+++ b/src/components/CurrentWeather/CurrentWeather.css
@@ -1,8 +1,10 @@
 .current-weather-container {
   margin-top: 2vh;
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
-  max-width: 50vh;
+  max-width: 40vh;
   border-radius: 7px;
+  min-width: 300px;
+  min-height: 400px;
 }
 
 .current-weather-icon {
